--- a/arch/arm/boot/dts/zynq-zturn.dts
+++ b/arch/arm/boot/dts/zynq-zturn.dts
@@ -97,19 +97,10 @@
 };
 
 &gem0 {
-    compatible = "cdns,gem";
-    reg = <0xe000b000 0x2000>;
-    status = "okay";
-    interrupts = <0 22 4>;
-    interrupt-parent = <&intc>;
-    clocks = <&clkc 30>, <&clkc 30>, <&clkc 13>;
-    clock-names = "pclk", "hclk", "tx_clk";
-    phy-mode = "rgmii-id";
-    phy-handle = <&phy0>;
-    phy0: phy@0 {
-        device_type = "ethernet-phy";
-        reg = <0>;
-    };
+	local-mac-address = [00 0a 35 00 00 00];
+	phy-mode = "rgmii-id";
+	status = "okay";
+	xlnx,ptp-enet-clock = <0x69f6bcb>;
 };
 
 &sdhci0 {
